--- a/src/components/blogBox/blogBox.scss
+++ b/src/components/blogBox/blogBox.scss
@@ -29,7 +29,7 @@
     padding: 0 10px 0 0;
     display: flex;
     overflow: hidden;
-    box-shadow: 0 0 2px red;
+    box-shadow: 0 0 1px white, 0 0 5px red;
     min-height: 300px;
   }
 
@@ -54,6 +54,10 @@
     bottom: 0;
     margin: 10px auto 0;
     font-size: 16px;
+
+    a {
+      color: white;
+    }
   }
 
   &__date {
