--- a/src/styles/_generic.scss
+++ b/src/styles/_generic.scss
@@ -40,6 +40,7 @@ body.lock {
   font-size: 2em;
   border: 2px solid rgb(129, 7, 7);
   box-shadow: 0 0 3px white, 0 0 7px rgb(129, 7, 7);
+  text-align: center;
 }
 
 .btn {
