--- a/src/components/blogBox/blogBox.scss
+++ b/src/components/blogBox/blogBox.scss
@@ -74,16 +74,16 @@
    
   }
 
-  &__text {
-    
+  &__text { 
     letter-spacing: 0.5px;
     margin: 15px 0 0;
-    padding: 0 10px;
+    padding: 0 5px;
     text-indent: 15px;
+    text-align: justify;
     line-height: 22px;
     font-weight: 400;
     font-size: 17px;
-    height: 155px;
+    height: 180px;
     overflow: hidden;
   
   }
@@ -101,7 +101,7 @@
     } 
 
     &__text {
-      max-height: 100px;
+      max-height: 120px;
     }
   }
 }
@@ -134,6 +134,10 @@
       display: block;
       max-width: 100%;
       padding: 0 0 0 0;
+    }
+
+    &__text {
+      max-height: 80px;
     }
 
     &__image {
