added gtag for promotion

--- a/src/emailSent.pug
+++ b/src/emailSent.pug
@@ -12,6 +12,7 @@ html(lang="en")
     meta(property="og:url" content="https://www.eformaliza.com/") 
     meta(property="og:description" content="Criação de web sites profissionais") 
     meta(property="og:image" content="https://i.postimg.cc/RCWvsSxt/logo-principal.jpg")
+    <script> gtag('event', 'conversion', { 'send_to': 'AW-590042240/k_gOCLuSsMwDEICprZkC', 'value': 1.0, 'currency': 'BRL', 'transaction_id': '' }); </script>
     title Muito obrigado!!!
   body
     include components/thanks/thanks
