--- a/src/emailSentEsp.pug
+++ b/src/emailSentEsp.pug
@@ -11,7 +11,8 @@ html(lang="en")
     meta(property="og:site_name" content="Pensaste en sitios WEB? Pensaste e-Formaliza") 
     meta(property="og:url" content="https://www.eformaliza.com/") 
     meta(property="og:description" content="Creación de sitios WEB profesionales") 
-    meta(property="og:image" content="https://i.postimg.cc/RCWvsSxt/logo-principal.jpg") 
+    meta(property="og:image" content="https://i.postimg.cc/RCWvsSxt/logo-principal.jpg")
+    <script> gtag('event', 'conversion', { 'send_to': 'AW-590042240/k_gOCLuSsMwDEICprZkC', 'value': 1.0, 'currency': 'BRL', 'transaction_id': '' }); </script>
     title ¡Muchas gracias!
   body
     include components/thanks/thanksEsp
