--- a/src/post.pug
+++ b/src/post.pug
@@ -13,6 +13,7 @@ html(lang="en")
     meta(property="og:description" content="Criacão e manutenção de Websites, páginas online, páginas de promoção, lojas online, e-commerce, desenho, codificação, promoção nas redes sociais. Plataformas Tray, Loja integrada, WordPress") 
     meta(property="og:image" content="https://i.postimg.cc/RCWvsSxt/logo-principal.jpg")
     script(defer src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver")
+    <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-63DZLREM66');gtag('config', 'AW-590042240');</script>
     title Post
   body.preload#home(style="visibility: hidden;")
     include components/blogHeader/blogHeader
