added instagram feed

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,6 +17,8 @@
 @use "../components/blogBox/blogBox";
 @use "../components/whatsappIcon/whatsappIcon";
 @use "../components/arrowLeft/arrowLeft";
+@use "../components/instaFeed/instaFeed";
+
 
 //import fonts and variables
 @import "fonts";
