--- a/src/blog.pug
+++ b/src/blog.pug
@@ -14,6 +14,7 @@ html(lang="en")
     meta(property="og:image" content="https://i.postimg.cc/RCWvsSxt/logo-principal.jpg")
     script(defer src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver")
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-63DZLREM66"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-590042240"></script>
     <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-63DZLREM66');gtag('config', 'AW-590042240');</script>
     title Nosso Blog
   body.preload#home(style="visibility: hidden;")
