--- a/src/components/blogPost/blogPost.scss
+++ b/src/components/blogPost/blogPost.scss
@@ -19,6 +19,13 @@
     p {
       margin: 15px 0;
     }
+
+    a {
+      color: red;
+      text-decoration: underline;
+      font-weight: 400;
+
+    }
   }
 
   &__image {
