--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,6 +1,6 @@
 header.header
   .container
-    a(href="./index.html")   
+    a(href="./")   
       img.header__logo.logo(src=require("../../../images/logo_principal.svg"), alt="criação de sites", title="criação de websites")
     nav.header__nav 
       .header__list
