--- a/src/components/instaFeed/instaFeed.pug
+++ b/src/components/instaFeed/instaFeed.pug
@@ -1,4 +1,4 @@
 .instaFeed 
   .instaFeed__container
-    .instaFeed__title.title Nossas redes
+    div(data-aos="fade-in" data-aos-duration="1800").instaFeed__title.title Nossas redes
     .instaFeed__box#instafeed
