--- a/src/components/portfolio/portfolio.pug
+++ b/src/components/portfolio/portfolio.pug
@@ -9,7 +9,7 @@
         .swiper-slide
           img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/pizzas.jpg"), alt="projetos realizados") 
         .swiper-slide
-          img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/oliveira.jpg"), alt="projetos realizados")
+          img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/dentist.jpg"), alt="projetos realizados")
         .swiper-slide
           img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/sasha.jpg"), alt="projetos realizados") 
         .swiper-slide
@@ -24,6 +24,8 @@
           img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/ozone.jpg"), alt="projetos realizados")
         .swiper-slide
           img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/quiz.jpg"), alt="projetos realizados")
+        .swiper-slide
+          img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/oliveira.jpg"), alt="projetos realizados")
         .swiper-slide
           img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/sinergia.jpg"), alt="projetos realizados")
       //pagination
