--- a/src/index.pug
+++ b/src/index.pug
@@ -18,7 +18,7 @@ html(lang="en")
     <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-63DZLREM66');gtag('config', 'AW-590042240');</script>
     title Criação de web sites profissionais para seu negócio
   body.preload#home(style="visibility: hidden;")
-    include components/langToggle/langToggle
+    //- include components/langToggle/langToggle
     include components/header/header
     include components/home/home
     include components/goal/goal
