--- a/src/components/discount/discount.pug
+++ b/src/components/discount/discount.pug
@@ -4,7 +4,7 @@
     div(data-aos="fade-in" data-aos-duration="1800" data-aos-delay="300").discount__image 
       img.lazy(src=require("../../../images/placeholder.png"), data-src=require("../../../images/fire.png"), alt="oferta", title="oferta")
     .discount__timer.timer
-      p(data-aos="fade-in" data-aos-duration="1800").timer__text ATÉ 31 DE DEZEMBRO, GANHE DESCONTO PROMOCIONAL DE 10% EM TODOS OS NOSSOS SERVIÇOS      
+      p(data-aos="fade-in" data-aos-duration="1800").timer__text ATÉ 31 DE JUNHO, GANHE DESCONTO PROMOCIONAL DE 10% EM TODOS OS NOSSOS SERVIÇOS      
       p.timer__time 21:13:33
       a.timer__title(href="#ask") 
         p(data-aos="fade-in" data-aos-duration="1800").timer__link Clique para o primeiro passo!   
