--- a/src/styles/_generic.scss
+++ b/src/styles/_generic.scss
@@ -22,7 +22,6 @@ body.lock {
   margin: 0 auto;
   padding: 0 20px;
   overflow: hidden;
-
 }
 
 .title {
@@ -50,13 +49,27 @@ body.lock {
   border-radius: 5px;
   font-weight: 600;
   font-size: 22px;
-  font-family: $font-family-subtitle,sans-serif;
+  font-family: $font-family-subtitle, sans-serif;
   width: fit-content;
 }
 
-
 .btn:hover {
   box-shadow: 0 0 7px White;
+}
+
+/*=============== SCROLL BAR ===============*/
+::-webkit-scrollbar {
+  width: 0.6rem;
+  // background-color: var(--body-color);
+  // background-color: rgb(206, 198, 198);
+  background-color: $colorSecondary;
+  // border-radius: .2rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: $colorTertiary;
+  border-radius: 0.2rem;
+  height: 60px;
 }
 
 @media (max-width: 700px) {
